--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dur2ihrqo/image/upload/v1749372179/footer_mqh6fc.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <title>Vite + React</title> -->
+    <title>HAG - Health and Growth</title>
   </head>
   <body>
     <div id="root"></div>
